--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,10 @@ body {
 div {
 width: 300px;
 height: 500px;
-margin: 90px auto;
+position:fixed;
+top:50%;
+left:50%;
+transform: translate(-50%, -50%); 
 padding: 10px;
 background-color: hsl(0, 0%, 100%);
 border-radius: 18px;
